app/assets/stylesheets/utilities.css
.my-8 {
  margin-top: 2rem;
  margin-bottom: 2rem;
}
.my-16 {
  margin-top: 4rem;
  margin-bottom: 4rem;
}
.mt-16 { margin-top: 4rem; }
.mb-16 { margin-bottom: 4rem; }
.mt-8 { margin-top: 2rem; }
.mt-4 { margin-top: 1rem; }
.mt-2 { margin-top: 0.5rem; }
.mt-1 { margin-top: 0.25rem; }
.mt-0 { margin-top: 0; }
.mb-8 { margin-bottom: 2rem; }
.mb-4 { margin-bottom: 1rem; }
.mb-2 { margin-bottom: 0.5rem; }
.mb-0 { margin-bottom: 0; }
.mr-4 { margin-right: 1rem; }
.mr-2 { margin-right: 0.5rem; }
.mr-1 { margin-right: 0.25rem; }
.ml-2 { margin-left: 0.5rem; }
.p-0 { padding: 0; }
.p-2 { padding: 0.5rem; }
.p-4 { padding: 1rem; }
.pr-2 { padding-right: 0.5rem; }
.pl-2 { padding-left: 0.5rem; }
.px-4 { padding-left: 1rem; padding-right: 1rem; }
.px-2 { padding-left: 0.5rem; padding-right: 0.5rem; }
.inline-block { display: inline-block; }
.inline { display: inline; }
.block { display: block!important; }
.flex { display: flex; }
.flex-col { flex-direction: column; }
.items-end { align-items: flex-end; }
.gap-1 { gap: 0.25rem; }
.gap-2 { gap: 0.5rem; }
.gap-4 { gap: 1rem; }
.text-center { text-align: center; }
.text-xs { font-size: 0.75rem; }
.text-gray { color: var(--pico-muted-color); }
.text-red { color: #FF0000; }
.text-green {
  color:  green;
  @media (prefers-color-scheme: dark) {
    color:  #32CD32;
  }
}
.button-as-text {
  border: 0;
  padding: 0;
  background-color: transparent;
}
.text-white { color: white; }
.bg-red { background-color: red; }
.text-black { color: black; }
.text-orange { color: orange; }
.text-left { text-align: left; }
.underline { text-decoration: underline; }
.full-width { width: 100%; }

.flex { display: flex; }
.justify-between { justify-content: space-between; }
.justify-end { justify-content: flex-end; }
.items-center { align-items: center; }
.h-min { height: min-content; }
.h-full { height: 100%; }
.w-1\/2 { width: 50%; }
.min-w-max { min-width: max-content; }
.w-max { width: max-content!important; }
.text-right { text-align: right; }
.text-sm { font-size: 0.875rem; }
.text-md { font-size: 1rem; }
.text-lg { font-size: 1.125rem; }
.text-xl { font-size: 1.25rem; }
.font-normal { font-weight: 400; }
.leading-loose { line-height: 2em; }
.overflow-x-scroll { overflow-x: scroll; }
.nowrap { white-space: nowrap; }
.flex-nowrap { flex-wrap: nowrap; }
.flex-noshrink { flex-shrink: 0; }
.rounded-full { border-radius: 9999px; }

a:has(> article.product-card), a:has(> article.product-card-compact-list) {
  text-decoration: none;
  color: inherit;
}
.product-card {
  height: 100%;
  display: flex;
  flex-direction: column;
  overflow: hidden;

  & > section {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
  }
}
.product-card-compact-list {
  display: flex;

  .product-image--square {
    max-width: 100px;

    @media (width >= 480px) {
      max-width: 120px;
    }
  }

  .product-title {
    margin-top: 0;
  }

  section {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
}
.product-title {
  font-weight: 400;
  font-size: 1rem;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
}
.product-image {
  width: 100%;
}
.product-price {
  font-size: 0.75rem;
}
.product-image--square {
  aspect-ratio: 1 / 1;
  object-fit: cover;
}
.product-image--medium {
  width: 200px;
}
.product-image--full-height {
  max-height: 100%;
}
.site-title, .cart {
  color: inherit;
  text-decoration: none;
}
.site-title {
  font-weight: 600;
  font-size: 1.25rem;
}
.icon, .cart-icon { width: 20px; }
.main-menu p {
  display: flex;
  flex-wrap: wrap;
  line-height: 1.25;
  gap: 0.75rem;
  margin: 0;
}
.icon-xlarge {
  width: 48px;
}
.flash-success {
  background-color: #d1fae5;
  color: #16a34a;
  padding: 1rem;
  border-radius: 4px;

  @media (prefers-color-scheme: dark) {
    background-color: #1a4731;
    color: #6ee7b7;
  }
}

.flash-error {
  background-color: #FEE2E2;
  color: #dc2626;
  padding: 1rem;
  border-radius: 4px;

  @media (prefers-color-scheme: dark) {
    background-color: #6d0a0a;
    color: #fca5a5;
  }
}

.badge {
  --badge-color: var(--pico-color);
  --badge-background-color: var(--pico-background-color);
  --badge-border-color: var(--pico-muted-color);
  --pending-h: 100;
  --paid-h: 145;
  --expired-h: 250;
  --failed-h: 25;

  border-radius: 999px;
  padding: 0.25rem 0.75rem;
  border: 1px solid var(--badge-border-color);
  color: var(--badge-color);
  background-color: var(--badge-background-color);
}

/* State: Pending */
.badge__status-pending {
    --badge-background-color: oklch(96% 0.05 var(--pending-h));
    --badge-border-color: oklch(90% 0.1 var(--pending-h));
    --badge-color: oklch(50% 0.15 var(--pending-h));
  }

/* State: Paid */
.badge__status-paid {
  --badge-background-color: oklch(96% 0.05 var(--paid-h));
  --badge-border-color: oklch(90% 0.1 var(--paid-h));
  --badge-color: oklch(50% 0.15 var(--paid-h));
}

/* State: Expired */
.badge__status-expired {
  --badge-background-color: oklch(96% 0.01 var(--expired-h));
  --badge-border-color: oklch(90% 0.03 var(--expired-h));
  --badge-color: oklch(50% 0.05 var(--expired-h));
}

/* State: Failed */
.badge__status-failed {
  --badge-background-color: oklch(96% 0.05 var(--failed-h));
  --badge-border-color: oklch(90% 0.1 var(--failed-h));
  --badge-color: oklch(50% 0.15 var(--failed-h));
}

@media (prefers-color-scheme: dark) {
  .badge__status-pending {
    --badge-background-color: oklch(25% 0.06 var(--pending-h));
    --badge-border-color: oklch(35% 0.08 var(--pending-h));
    --badge-color: oklch(85% 0.12 var(--pending-h));
  }

  .badge__status-paid {
    --badge-background-color: oklch(25% 0.06 var(--paid-h));
    --badge-border-color: oklch(35% 0.08 var(--paid-h));
    --badge-color: oklch(85% 0.12 var(--paid-h));
  }

  .badge__status-expired {
    --badge-background-color: oklch(25% 0.02 var(--expired-h));
    --badge-border-color: oklch(35% 0.03 var(--expired-h));
    --badge-color: oklch(85% 0.04 var(--expired-h));
  }

  .badge__status-failed {
    --badge-background-color: oklch(25% 0.06 var(--failed-h));
    --badge-border-color: oklch(35% 0.08 var(--failed-h));
    --badge-color: oklch(85% 0.12 var(--failed-h));
  }
}

.payment-method-name {
  font-size: 20px;
  font-weight: normal;
}

.qris {
  width: 100%;
  max-width: 500px;
  margin: 0 auto;
}

.mb-4-on-tablet-and-up {
  @media (min-width: 480px) {
    margin-bottom: 1rem;
  }
}

.card {
  border-radius: 8px;
  border: 1px solid var(--pico-muted-border-color);
  padding: 1rem;
  background: var(--pico-card-background-color);
}

.relative { position: relative }

.cart-filled-indicator {
  --pico-background-color: #fff;

  @media (prefers-color-scheme: dark) {
    --pico-background-color: rgb(19, 22.5, 30.5);
  }

  background-color: red;
  width: 8px;
  height: 8px;
  border-radius: 999px;
  position: absolute;
  top: 0;
  outline: 2px solid var(--pico-background-color);
}

.danger {
  color: red;
  border-color: red;
}
.mx-auto {
  margin: 0 auto;
}
.settings h3 {
  margin-top: 2rem;
}

